--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.7",
+        "sass-loader": "^8.0.2",
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@websanova/vue-auth": "2.21.14-beta",
+        "es6-promise": "4.2.8",
+        "vue": "^2.6.12",
+        "vue-axios": "^3.2.4",
+        "vue-cookies": "1.6.1",
+        "vue-loading-overlay": "3.2.0",
+        "vue-moment": "4.1.0",
+        "vue-router": "3.1.3",
+        "vuelidate": "0.7.5",
+        "vuex": "3.1.2"
     }
 }
