!3 - setup login to dashboard

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=17d158febc309085affb",
+    "/css/app.css": "/css/app.css?id=119c162b027c86700bbf"
 }
