--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ npm-debug.log
 yarn-error.log
 composer.lock
 package-lock.json
-public/js/app.js
-public/css/app.css
-public/mix-manifest.json
+/public/js/app.js
+/public/css/app.css
+/public/mix-manifest.json
